# RamCoin

./: CHANGELOG.md  Cargo.toml  cli.ts
crates/vault-domain/: Cargo.toml
crates/vault-domain/src/: action.rs  lib.rs  policy.rs
lib/: admin-daemon-socket.ts  admin-passthrough.ts  admin-reset.ts  admin-setup.ts  agent-auth-clear.ts  agent-auth-file.js  agent-auth-file.ts  agent-auth-forwarding.ts  agent-auth-migrate.ts  agent-auth-revoke.ts  agent-auth-storage.js  agent-auth-storage.ts  agent-auth.ts  local-admin-access.ts  managed-daemon-platform.js  managed-daemon-platform.ts  mpp.ts  platform-support.ts  secret-service.js  secret-service.ts  shared-config-apply.ts  status-repair-cli.ts  sudo.ts  systemd-assets.js  systemd-assets.ts  wallet-profile.ts  wallet-repair.ts  wallet-setup.ts
releases/: v0.3.0.md  v0.3.1.md
scripts/: build-installer-bundle.mjs  install-rust-binaries.mjs  installer.sh  run-installer-smoke.sh
scripts/systemd/: agentpay-daemon-password-helper.sh  install-system-daemon.sh  (+2 more)
test/: admin-daemon-socket.test.mjs  admin-passthrough.test.mjs  admin-reset.test.mjs  admin-setup.test.mjs  agent-auth-clear.test.mjs  agent-auth-migrate.test.mjs  agent-auth-revoke.test.mjs  cli-smoke.test.mjs  install-rust-binaries.test.mjs  installer-smoke-script.test.mjs  local-admin-access.test.mjs  mpp.test.mjs  payment-http.test.mjs  setup-agentpay-script.test.mjs  shared-config-apply.test.mjs  sudo.test.mjs  systemd-helper.test.mjs  tempo-session-signing-hash.test.mjs  wallet-profile.test.mjs  wallet-repair.test.mjs  wallet-setup.test.mjs  wallet-status.test.mjs
(+9 files in other folders)
