[package]
name = "vault-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy-dyn-abi.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
